@@ -190,7 +190,8 @@ busybox drop-in
 udhcp is now a drop-in component for busybox (http://busybox.net).
 To update busybox to the latest revision, simply do a:
 
-cp *.[ch] <busybox_source>/networking/udhcp
+cp *.[ch] README AUTHORS COPYING ChangeLog TODO \ 
+	<busybox_source>/networking/udhcp
 
 The only two files udhcp does not provide are config.in and
 Makefile.in, so these may need to be updated from time to time.
