@@ -1,4 +1,5 @@
 0.9.8 (pending)
++ fixed renew behavior (me)
 + udhcp now fits nicely into busybox
   (Glenn McGrath <bug1@optushome.com.au> as well as myself)
 + updated client manpage (me)
